Tue Dec 21 09:22:19 1993  Ken Raeburn  (raeburn@rtl.cygnus.com)

	* coffcode.h (coff_write_relocs) [SWAP_OUT_RELOC_OFFSET]: Copy
	addend to r_offset field.

	* Makefile.in (CFILES): Added coff-sparc.c.  Rebuild dependencies.

	* coff-sparc.c (SWAP_IN_RELOC_OFFSET, SWAP_OUT_RELOC_OFFSET,
	CALC_ADDEND): Define.

	* aix386-core.c (aix386_core_file_p): Use cd_regs[0] for computing
	the offsetof because AIX /bin/cc does not like to take the address
	of an array.  (From Minh Tran-Le.)

Thu Dec 16 13:06:32 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* Thu Dec 16 15:41:06 1993  Peter Hoogenboom  (hoogen@cs.utah.edu)

	* elf32-hppa.c (hppa_elf_build_arg_reloc_stub): Make sure to copy
	the return pointer into %r2 if no jump-in-call-delay-slot
	optimization was done.

	* hosts/hp300bsd.h: Correctly identify 4.3BSD vs 4.4BSD.

Wed Dec 15 08:04:16 1993  David J. Mackenzie  (djm@thepub.cygnus.com)

	* hosts/std-host.h: (time): Don't declare; conflicts on Mach3.

	* hosts/i386mach3.h (HOST_PAGE_SIZE): Set to 1 to avoid padding.
	(HOST_SEGMENT_SIZE): Set to 0 for same reason.

	* i386mach3.c (PAGE_SIZE, SEGMENT_SIZE): Same changes as above.
	(TEXT_START_ADDR): Correct.
	(MY_backend_data): Define.

	* aoutx.h (adjust_o_magic, adjust_z_magic, adjust_n_magic):
	New functions; code moved from aout_<size>_adjust_sizes_and_vmas.

Tue Dec 14 21:48:33 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

        * som.c (som_begin_writing): Fix thinkos in auxiliary header
	support.
	(bfd_som_attach_aux_hdr): Likewise.

Mon Dec 13 23:34:48 1993  Jeffrey A. Law  (law@snake.cs.utah.edu)

	* elf32-hppa.c (hppa_elf_gen_reloc_type): Handle 'T' field
	selectors for PIC code.

	* som.c (hppa_som_gen_reloc_type): Handle 'T' field selectors.
	(som_write_fixups): Handle R_DLT_REL, R_FSEL, R_RSEL, R_LSEL
	relocations needed by PIC.

Tue Dec  7 15:47:51 1993  Stu Grossman  (grossman at cygnus.com)

	* nlmcode.h:  Fixes to avoid compiler warnings...
